name:		        hcompmgr
version:	        0.1.1
license:	        BSD3
copyright:	        Aren Olson, 2011
maintainer:	        Aren Olson <reacocard@gmail.com>
homepage:               <github>
category:	        Graphics
synopsis:	        Composite manager in haskell
build-type:             Simple
cabal-version:          >= 1.2

Executable compmgr
    Main-Is:            compmgr.hs
    build-depends:	base >= 3 && < 5, X11, X11-xdamage, X11-xcomposite, X11-xfixes, GLX, OpenGL
    ghc-options:        -Wall -fno-warn-unused-do-bind

